--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.1",
   "description": "Package to generate locale based JSON from excel sheet",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./index.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,8 @@
     "generate-json": "./index.js"
   },
   "author": "Clister Nitish Dmello <clisterdmello@gmail.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "convert-excel-to-json": "^1.4.1"
+  }
 }
